# ATmega32U4

./: README.md
BulkVendor/: BulkVendor.c  BulkVendor.h  CMakeLists.txt  Descriptors.c  Descriptors.h  LufaUtil.c  LufaUtil.h  global.h
BulkVendor/test/: BulkVendor.pcapng  dmesg.txt  lsusb.txt  test_builk_vendor.py
GenericHID/: CMakeLists.txt  Descriptors.c  Descriptors.h  GenericHID.c  GenericHID.h  global.h
GenericHID/test/: dmesg.txt  lsusb.txt  test_generic_hid_libusb.py
VirtualSerial/: CMakeLists.txt  Descriptors.c  Descriptors.h  VirtualSerial.c  VirtualSerial.h
VirtualSerial/test/: dmesg.txt  lsusb.txt  serialpy.py
